--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-matplotlib==3.4.3
-numpy==1.21.2
-pandas==1.3.3
-scikit-learn==1.0
-statsmodels==0.13.0
+jupyterlab==3.4.3
+numpy==1.23.1
+pandas==1.4.3
+seaborn==0.11.2
+scikit-learn==1.1.1
+statsmodels==0.13.2
