--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -3,6 +3,7 @@ numpy==1.23.1
 pandas==1.4.3
 seaborn==0.11.2
 scikit-learn==1.1.1
+scikit-image==0.19.3
 statsmodels==0.13.2
 mlflow==1.27.0
 parsenvy==3.0.2
