--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ numpy==1.23.1
 pandas==1.4.3
 seaborn==0.11.2
 scikit-learn==1.1.1
-statsmodels==0.13.2
+scikit-image==0.19.3
+opencv-python==4.6.0.66
+kornia==0.6.6
+dash==2.6.0
